--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ header {
 #floatingIconContainer {
   position: fixed;
   top: 50%;
-  left: 10%; /* Position the floating image to the left 10% of the screen */
+  right: 2%; /* Position the floating image to the left 10% of the screen */
   transform: translate(-50%, -50%);
   z-index: 9999;
   cursor: pointer;
@@ -17,8 +17,7 @@ header {
 
 /* Add styles for the floating icon */
 #floatingIcon {
-  width: 150px;
-  height: 150px;
+  width: 200px;
 }
 
 .top-line {
@@ -303,7 +302,7 @@ font-family: 'Jalnan';
   transform: translateX(-50%);
 }
 .img-slider .navigation .btn{
-  background: rgba(0, 0, 0, 0.2);
+  background: white;
   width: 12px;
   height: 12px;
   margin: 10px;
@@ -311,7 +310,7 @@ font-family: 'Jalnan';
   cursor: pointer;
 }
 .img-slider .navigation .btn.active{
-  background: #4A4A4A;
+  background: #3b86f8;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
 
