--- a/css/mb_attraction_detail.css
+++ b/css/mb_attraction_detail.css
@@ -239,9 +239,6 @@ body {
   }
 
   .footer_box {
-    border-left: 2px solid black;
-    border-right: 2px solid black;
-    border-bottom: 2px solid black;
     padding-bottom: 5px;
     background-color: #333333;
   }
@@ -250,6 +247,7 @@ body {
     color: #9e9e9e;
     font-weight: 400;
     font-size: 14px;
+    font-family: 'Noto Sans KR', sans-serif;
     text-align: center;
     padding: 30px;
     border-bottom: 1px solid #7d7d7d;
@@ -258,6 +256,7 @@ body {
     background-color: #333333;
     color: #9e9e9e;
     font-weight: 400;
+    font-family: 'Noto Sans KR', sans-serif;
     font-size: 11px;
     text-align: center;
     padding: 30px;
