--- a/css/mb_onedayPass.css
+++ b/css/mb_onedayPass.css
@@ -84,7 +84,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 10%;
+    margin: 10% 0;
   }
 
   .image-container .image-wrapper {
@@ -153,9 +153,6 @@ body {
   }
 
       .footer_box {
-      border-left: 2px solid black;
-      border-right: 2px solid black;
-      border-bottom: 2px solid black;
       padding-bottom: 5px;
       background-color: #333333;
     }
@@ -163,6 +160,7 @@ body {
       background-color: #3b3b3b;
       color: #9e9e9e;
       font-weight: 400;
+      font-family: 'Noto Sans KR', sans-serif;
       font-size: 14px;
       text-align: center;
       padding: 30px;
@@ -171,6 +169,7 @@ body {
     .footer_copyright{
       background-color: #333333;
       color: #9e9e9e;
+      font-family: 'Noto Sans KR', sans-serif;
       font-weight: 400;
       font-size: 11px;
       text-align: center;
