--- a/css/mb_onedayPass.css
+++ b/css/mb_onedayPass.css
@@ -10,8 +10,8 @@ body {
   }
 
   body {
-    font-family: 'JalnanOTF', sans-serif;
-    background-color: #F8D950;
+    font-family: "JalnanOTF", sans-serif;
+    background-color: #f8d950;
     margin: 0;
   }
 
@@ -36,19 +36,19 @@ body {
     display: flex;
     align-items: center;
   }
-  
+
   /* Add margin to create some space between the icon and the input */
   .material-icons {
     margin-right: 5px;
   }
-  
+
   /* Adjust the flex properties of the search text to stay on the same row */
   .search-text {
     margin-top: 18px;
   }
 
   /* Header styles */
-  
+
   .mb_main_logo img {
     float: left;
     margin-top: 10px;
@@ -115,21 +115,21 @@ body {
     margin-bottom: 10px;
   }
 
-.image-container .image-text .passKor {
+  .image-container .image-text .passKor {
     margin-bottom: 15px;
     font-size: 22px;
-  } 
+  }
 
   .image-container .image-text ul {
     list-style: none;
     padding: 0;
     margin: 70px 0 40px 0;
   }
-  
+
   .image-container .image-text li {
     margin-bottom: 5px;
   }
-  
+
   .image-container .image-text .legoFace {
     display: inline-block;
     width: 13.33px;
@@ -152,33 +152,33 @@ body {
     margin: 35px 0;
   }
 
-      .footer_box {
-      padding-bottom: 5px;
-      background-color: #333333;
-    }
-    .footer {
-      background-color: #3b3b3b;
-      color: #9e9e9e;
-      font-weight: 400;
-      font-family: 'Noto Sans KR', sans-serif;
-      font-size: 14px;
-      text-align: center;
-      padding: 30px;
-      border-bottom: 1px solid #7d7d7d;
-    }
-    .footer_copyright{
-      background-color: #333333;
-      color: #9e9e9e;
-      font-family: 'Noto Sans KR', sans-serif;
-      font-weight: 400;
-      font-size: 11px;
-      text-align: center;
-      padding: 30px;
-    }
-    .footer_copyright img{
-      width: 70px;
-      margin: 0 0 30px 0;
-    }
+  .footer_box {
+    padding-bottom: 5px;
+    background-color: #333333;
+  }
+  .footer {
+    background-color: #3b3b3b;
+    color: #9e9e9e;
+    font-weight: 400;
+    font-family: "Noto Sans KR", sans-serif;
+    font-size: 14px;
+    text-align: center;
+    padding: 30px;
+    border-bottom: 1px solid #7d7d7d;
+  }
+  .footer_copyright {
+    background-color: #333333;
+    color: #9e9e9e;
+    font-family: "Noto Sans KR", sans-serif;
+    font-weight: 400;
+    font-size: 11px;
+    text-align: center;
+    padding: 30px;
+  }
+  .footer_copyright img {
+    width: 70px;
+    margin: 0 0 30px 0;
+  }
 }
 @media screen and (min-width: 391px) {
   .main,
@@ -195,7 +195,7 @@ body {
     display: block;
     text-align: center;
     font-size: 18px;
-    color: #FF5252;
+    color: #ff5252;
     margin-top: 20px;
   }
 }
