--- a/css/mb_themepark.css
+++ b/css/mb_themepark.css
@@ -1,49 +1,48 @@
 body {
+  background: #f9d851;
+}
+
+@media screen and (max-width: 390px) {
+  body {
     background: #f9d851;
+    font-family: "Jalnan";
   }
-  
-  @media screen and (max-width: 390px) {
-    body{
-      background: #f9d851;
-      font-family: 'Jalnan';
-    }
-    a {
-      text-decoration: none;
-      color: none;
-      color: inherit;
-    }
-    #screen-size-message {
-      display: none;
-    }
+  a {
+    text-decoration: none;
+    color: none;
+    color: inherit;
+  }
+  #screen-size-message {
+    display: none;
+  }
 
-    .navmenu-page-container {
-      display: none;
-    }
+  .navmenu-page-container {
+    display: none;
+  }
 
-    .show-navmenu {
-      display: block;
-    }
+  .show-navmenu {
+    display: block;
+  }
 
-    /* Hide the main content when the navigation menu is shown */
-    .show-navmenu ~ #main-page-container {
-      display: none;
-    }
+  /* Hide the main content when the navigation menu is shown */
+  .show-navmenu ~ #main-page-container {
+    display: none;
+  }
 
   .menu-item {
     display: flex;
     align-items: center;
   }
-  
+
   /* Add margin to create some space between the icon and the input */
   .material-icons {
     margin-right: 5px;
   }
-  
+
   /* Adjust the flex properties of the search text to stay on the same row */
   .search-text {
     margin-top: 18px;
   }
-
 
   .mb_main_logo img {
     float: left;
@@ -64,89 +63,85 @@ body {
     width: 20px;
     cursor: pointer;
   }
-    .mb_top_line {
-      background-color:  #6B6B6B;
-      height: 70px;
-      border-top: 2px solid black;
-      border-left: 2px solid black;
-      border-right: 2px solid black;
-    }
-    i {
-      font-size: 25px;
-      margin: 25px 263px 0 18px;
-      float: left;
-    }
-    
-  
-    .main {
-        background-color: #6B6B6B;
-        height: 180px;
-        font-size: 30px;
-        letter-spacing: 1px;
-        text-align: center;
-        padding-top: 140px;
-        border-left: 2px solid black;
-        border-right: 2px solid black;
-        border-bottom: 2px solid black;
-    }
-
-    .main_img img{
-        width: 60px;
-        float: right;
-        margin: 30px 84px 0 0;
-    }
-
-  
-  /* footer */
-  
-    .footer_box {
-      border-left: 2px solid black;
-      border-right: 2px solid black;
-      border-bottom: 2px solid black;
-      padding-bottom: 3px;
-      background-color: #333333;
-      font-family: 'Noto Sans KR', sans-serif;
-    }
-    .footer {
-      background-color: #3b3b3b;
-      color: #9e9e9e;
-      font-weight: 400;
-      font-size: 14px;
-      text-align: center;
-      padding: 30px;
-      border-bottom: 1px solid #7d7d7d;
-    }
-    .footer_copyright{
-      background-color: #333333;
-      color: #9e9e9e;
-      font-weight: 400;
-      font-size: 11px;
-      text-align: center;
-      padding: 30px;
-    }
-    .footer_copyright img{
-      width: 70px;
-      margin: 0 0 30px 0;
-    }
-
+  .mb_top_line {
+    background-color: #6b6b6b;
+    height: 70px;
+    border-top: 2px solid black;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
   }
-    @media screen and (min-width: 391px) {
-      .main,
-      .main_img img,
-      .mb_main_logo,
-      .mb_hamburger_btn,
-      .nav_top_line img,
-      .fa-solid,
-      #columns,
-      .footer_box {
-        display: none;
-      }
-      #screen-size-message {
-        display: block;
-        text-align: center;
-        font-size: 18px;
-        color: #FF5252;
-        margin-top: 20px;
-      }
-    }
-  
+  i {
+    font-size: 25px;
+    margin: 25px 263px 0 18px;
+    float: left;
+  }
+
+  .main {
+    background-color: #6b6b6b;
+    height: 180px;
+    font-size: 30px;
+    letter-spacing: 1px;
+    text-align: center;
+    padding-top: 140px;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+  }
+
+  .main_img img {
+    width: 60px;
+    float: right;
+    margin: 30px 84px 0 0;
+  }
+
+  /* footer */
+
+  .footer_box {
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    padding-bottom: 3px;
+    background-color: #333333;
+    font-family: "Noto Sans KR", sans-serif;
+  }
+  .footer {
+    background-color: #3b3b3b;
+    color: #9e9e9e;
+    font-weight: 400;
+    font-size: 14px;
+    text-align: center;
+    padding: 30px;
+    border-bottom: 1px solid #7d7d7d;
+  }
+  .footer_copyright {
+    background-color: #333333;
+    color: #9e9e9e;
+    font-weight: 400;
+    font-size: 11px;
+    text-align: center;
+    padding: 30px;
+  }
+  .footer_copyright img {
+    width: 70px;
+    margin: 0 0 30px 0;
+  }
+}
+@media screen and (min-width: 391px) {
+  .main,
+  .main_img img,
+  .mb_main_logo,
+  .mb_hamburger_btn,
+  .nav_top_line img,
+  .fa-solid,
+  #columns,
+  .footer_box {
+    display: none;
+  }
+  #screen-size-message {
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    color: #ff5252;
+    margin-top: 20px;
+  }
+}
